# STEP2STL

./: CMakeLists.txt  README.md  STEP2STL.cpp  build.sh
